Different solution for Flashcard flip button for Safari on MacOS https://github.com/thexerteproject/xerteonlinetoolkits/issues/910 Just increase z-index of the button so it's above the empty div.

--- a/modules/xerte/parent_templates/Nottingham/models_html5/flashCards.css
+++ b/modules/xerte/parent_templates/Nottingham/models_html5/flashCards.css
@@ -158,8 +158,11 @@
 	}
 	
 	.emptyDiv {
-		height: 4px;
+		height: 4em;
 	}
+    .flipBtn{
+	z-index: 1;
+    }
 	
 	#cardNoHolder {
 		display: table-row;
